[package]
name = "co_queue"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-core = "0.3"
num_cpus = "1.11"
lazy_static = "1.4"
parking_lot = {version = "0.10", features = ["deadlock_detection"]}
libc = "0.2"
smallvec = "1.1"
backtrace = "0.3"
petgraph = "0.5"
thread-id = "3.3"
crossbeam = "0.7"
crossbeam-utils = "0.7"

[dev-dependencies]

